feat: Multi-server support and persist config to runtime .yml